# python-cdb

./: .gitignore  CMakeLists.txt  ChangeLog  Example  MANIFEST  README  README.md  setup.cfg  setup.py  tests.py
benchmark/: addmany.py
debian/: changelog  control
src/: cdbmodule.c  unicode.c  unicode.h
